--- a/3. TCP 소켓 프로그래밍.md
+++ b/3. TCP 소켓 프로그래밍.md
@@ -18,7 +18,7 @@
 ### ✅ 전체 예제 코드
 
 ```
-c코드 복사// tcp_server_single.c
+// tcp_server_single.c
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
